--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>Ничего ты не знаешь, Джон Сноу. Фронтенд new.vk.com</title>
+		<title>React Shower</title>
 		<script src="js/utils/prism.js" ></script>
 	</head>
 	<body>
